--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,23 @@
+click==6.7
 flake8==3.3.0
+Flask==0.12.1
+hupper==0.5
+itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==1.0
 mccabe==0.6.1
 mypy==0.511
+PasteDeploy==1.5.2
 py==1.4.33
 pycodestyle==2.3.1
 pyflakes==1.5.0
+pyramid==1.8.3
 pytest==3.0.7
+repoze.lru==0.6
+translationstring==1.3
 typed-ast==1.0.3
+venusian==1.1.0
+WebOb==1.7.2
+Werkzeug==0.12.1
+zope.deprecation==4.2.0
+zope.interface==4.4.1
