--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,13 @@
+amqp==2.1.4
+billiard==3.5.0.2
+celery==4.0.2
 click==6.7
 flake8==3.3.0
 Flask==0.12.1
 hupper==0.5
 itsdangerous==0.24
 Jinja2==2.9.6
+kombu==4.0.2
 MarkupSafe==1.0
 mccabe==0.6.1
 mypy==0.511
@@ -13,10 +17,12 @@ pycodestyle==2.3.1
 pyflakes==1.5.0
 pyramid==1.8.3
 pytest==3.0.7
+pytz==2017.2
 repoze.lru==0.6
 translationstring==1.3
 typed-ast==1.0.3
 venusian==1.1.0
+vine==1.1.3
 WebOb==1.7.2
 Werkzeug==0.12.1
 zope.deprecation==4.2.0
